
//// DBML generado automáticamente — SmartEdify Tenancy Service
//// Versión: 2.2 — Fecha: 2025-10-13
//// Fuente: Arquitectura de Base de Datos — SmartEdify v2.2

Project SmartEdify_Tenancy {
  database_type: 'PostgreSQL'
  Note: 'Esquema completo y alineado con RLS, trazabilidad y cumplimiento normativo.'
}

Table tenants {
  id uuid [pk, not null]
  name varchar [not null]
  legal_name varchar [not null]
  jurisdiction_root varchar [not null]
  status varchar [default: 'ACTIVE']
  data_residency varchar [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table condominiums {
  id uuid [pk, not null]
  tenant_id uuid [ref: > tenants.id, not null]
  name varchar [not null]
  address jsonb [not null]
  jurisdiction varchar [not null]
  timezone varchar [not null]
  currency varchar [not null]
  status varchar [default: 'ACTIVE']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table buildings {
  id uuid [pk, not null]
  tenant_id uuid [ref: > tenants.id, not null]
  condominium_id uuid [ref: > condominiums.id, not null]
  name varchar [not null]
  floors integer [not null]
  address_override jsonb
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table units {
  id uuid [pk, not null]
  tenant_id uuid [ref: > tenants.id, not null]
  condominium_id uuid [ref: > condominiums.id, not null]
  building_id uuid [ref: > buildings.id, not null]
  unit_number varchar [not null]
  owner_user_id uuid [not null]
  type varchar [default: 'RESIDENTIAL']
  area_sqm decimal
  bedrooms integer
  bathrooms integer
  status varchar [default: 'ACTIVE']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table subunits {
  id uuid [pk, not null]
  tenant_id uuid [ref: > tenants.id, not null]
  condominium_id uuid [ref: > condominiums.id, not null]
  unit_id uuid [ref: > units.id, not null]
  subunit_number varchar [not null]
  description varchar
  area_sqm decimal
  type varchar [default: 'INTERNAL']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Note 'Jerarquía: Tenant → Condominium → Building → Unit → Subunit (máximo 3 niveles de profundidad). Todas las entidades incluyen tenant_id y condominium_id para compatibilidad con RLS.' {
  color: '#1d96b2'
}
